--- a/.env
+++ b/.env
@@ -5,12 +5,15 @@
   NEXTAUTH_SECRET= codingwithstanley
   NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-  EMAIL_ADDRESS=sampsonanim72@gmail.com
-  EMAIL_PASS=lesescygzwuropsq
+  # EMAIL_ADDRESS=sampsonanim72@gmail.com
+  # EMAIL_PASS=lesescygzwuropsq
 
  ADMIN_USERNAME = admin
   ADMIN_PASSWORD= 123456
   TOKEN_KEY = Swdvw56CV||6778%$ygup3|nm%n0kh
   
+  MAILGUN_API_KEY= fdb8fbbc804776104e8348d907cfd68f-e5475b88-5f0b6b8b
+
+  MAILGUN_DOMAIN= sandbox700c83b5c0fe485690685a651588412f.mailgun.org
 
   
