--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.9",
+    "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
@@ -23,10 +23,12 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "framer-motion": "^8.5.5",
     "fs": "^0.0.1-security",
     "hook-form": "^0.0.1",
     "js-cookie": "^3.0.1",
+    "mailgun.js": "^9.1.2",
     "mongoose": "^6.8.4",
     "next": "13.1.2",
     "next-auth": "^4.19.0",
